--- a/send0/index.html
+++ b/send0/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/cl1p.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Send0</title>
+    <title>Cl1p.in</title>
   </head>
   <body>
     <div id="root"></div>
